log
Fri Mar 20 05:38:40 PM UTC 2026: 
 tests:  0|5
total_score: 0/70
778e465
Fri Mar 20 05:46:44 PM UTC 2026: 
 exercises.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:85:20: error: expected ‘;’ before ‘while’
   85 |    dato = pop(PAux)
      |                    ^
      |                    ;
   86 |    while (dato != NULL){
      |    ~~~~~            
9c90453
Fri Mar 20 05:47:12 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
f57eeb8
Fri Mar 20 05:58:00 PM UTC 2026: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:57:11: error: implicit declaration of function ‘Front’ [-Wimplicit-function-declaration]
   57 |    while (Front(L) != -1){
      |           ^~~~~
exercises.c:59:7: error: implicit declaration of function ‘PushBack’; did you mean ‘pushBack’? [-Wimplicit-function-declaration]
   59 |       PushBack(LAux, Front(L));
      |       ^~~~~~~~
      |       pushBack
exercises.c:60:7: error: implicit declaration of function ‘PopFront’; did you mean ‘popFront’? [-Wimplicit-function-declaration]
   60 |       PopFront(L);
      |       ^~~~~~~~
      |       popFront
ec7275f
Fri Mar 20 06:00:25 PM UTC 2026: 
 exercises.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:56:25: error: implicit declaration of function ‘Front’ [-Wimplicit-function-declaration]
   56 |    int suma = 0, dato = Front(L);
      |                         ^~~~~
exercises.c:59:22: error: passing argument 2 of ‘pushBack’ makes pointer from integer without a cast [-Wint-conversion]
   59 |       pushBack(LAux, Front(L));
      |                      ^~~~~~~~
      |                      |
      |                      int
In file included from exercises.c:6:
arraylist.h:20:30: note: expected ‘void *’ but argument is of type ‘int’
   20 | void pushBack(List *L, void *dato);
      |                        ~~~~~~^~~~
744fb1d
Fri Mar 20 06:01:37 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:56:25: error: implicit declaration of function ‘Front’ [-Wimplicit-function-declaration]
   56 |    int suma = 0, dato = Front(L);
      |                         ^~~~~
exercises.c:59:22: error: passing argument 2 of ‘pushBack’ makes pointer from integer without a cast [-Wint-conversion]
   59 |       pushBack(LAux, dato);
      |                      ^~~~
      |                      |
      |                      int
In file included from exercises.c:6:
arraylist.h:20:30: note: expected ‘void *’ but argument is of type ‘int’
   20 | void pushBack(List *L, void *dato);
      |                        ~~~~~~^~~~
9a75c76
Fri Mar 20 06:02:06 PM UTC 2026: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:57:17: error: implicit declaration of function ‘Front’ [-Wimplicit-function-declaration]
   57 |    void* dato = Front(L);
      |                 ^~~~~
exercises.c:57:17: error: initialization of ‘void *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
exercises.c:58:16: error: comparison between pointer and integer [-Werror]
   58 |    while (dato != -1){
      |                ^~
exercises.c:59:11: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   59 |       suma+=dato;
      |           ^~
exercises.c:62:12: error: assignment to ‘void *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
   62 |       dato = Front(L);
      |            ^
cc1: all warnings being treated as errors
5b7760d
Fri Mar 20 06:03:33 PM UTC 2026: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:57:16: error: implicit declaration of function ‘Front’ [-Wimplicit-function-declaration]
   57 |    int* dato = Front(L);
      |                ^~~~~
exercises.c:57:16: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
exercises.c:58:16: error: comparison between pointer and integer [-Werror]
   58 |    while (dato != -1){
      |                ^~
exercises.c:59:11: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   59 |       suma+=dato;
      |           ^~
exercises.c:62:12: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
   62 |       dato = Front(L);
      |            ^
cc1: all warnings being treated as errors
92cfe5f
Fri Mar 20 06:08:12 PM UTC 2026: 
 exercises.c | 9 ---------
 1 file changed, 9 deletions(-)
 tests:  2|3
total_score: 20/70
4ecfdce
